<resources>
    <string name="app_name">Vinsta</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Vinsta</string>
    <string name="story_btn_desc">Story adding button</string>
    <string name="create_a_story_txt">Create a story</string>
    <string name="vipul_class">vipul.class</string>
    <string name="my_bio">I am a learner who loves to learn. I love to read, learn about new things and meet new people. I am also interested in learning leadership quality and discipline.</string>
    <string name="log_into_vinsta_now">Log into Vinsta Now</string>
    <string name="slogn">Because We Love Social Media</string>
    <string name="email_hint">Email Address</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="following">Following</string>
    <string name="post_button_text">post</string>
    <string name="create_a_post_text">Create a Post</string>
    <string name="caption">Caption....</string>
    <string name="user_post_desc">User post</string>
</resources>