<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_a_post_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/postButton"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/followed_bg"
                android:enabled="true"
                android:text="@string/post_button_text"
                android:textColor="#448AFF"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:id="@+id/view7"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#6B000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postButton" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="@dimen/_45mdp"
                android:layout_height="@dimen/_45mdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/user"
                app:civ_border_color="#536DFE"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view7" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/user_image"
                app:layout_constraintStart_toEndOf="@+id/user_image"
                app:layout_constraintTop_toTopOf="@+id/user_image"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/editTextPostDesc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/caption_bg"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/caption"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:paddingStart="7dp"
                android:scrollHorizontally="false"
                app:layout_constraintBottom_toTopOf="@+id/postingImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_image"
                app:layout_constraintTop_toBottomOf="@+id/user_image" />

            <View
                android:id="@+id/view8"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="#6B000000"
                app:layout_constraintBottom_toTopOf="@id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/selectPhotoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="13dp"
                android:text="Add to your post"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/selectPhotoImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/selectPhotoImage" />

            <ImageView
                android:id="@+id/postingImage"
                android:layout_width="338dp"
                android:layout_height="400dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/view8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_image"
                app:layout_constraintVertical_bias="0.892" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/postingImage"
                app:layout_constraintEnd_toEndOf="@+id/postingImage"
                app:layout_constraintStart_toStartOf="@+id/postingImage"
                app:layout_constraintTop_toTopOf="@+id/postingImage" />




</androidx.constraintlayout.widget.ConstraintLayout>